feat: update create_tables to use config.cfg. update config_template.cfg accordingly doc: update README.md to reflect different ETL avenues doc: add DEVELOPENT.md to collect open issues, tricks and knowledge

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1,6 +1,22 @@
 [PATH]
+COMMODITIES_DATA=data/commodity_trade_statistics_data.csv
 INPUT_DATA=data/
 OUTPUT_DATA=data/tables/
+
+
+[POSTGRESQL]
+url=jdbc:postgresql://127.0.0.1:5432/world
+dbname=world
+# make sure your user has Create DB rights
+username=<your postgresql user name>
+password=
+driver=org.postgresql.Driver
+
+
+[SPARK]
+# get it here: https://jdbc.postgresql.org/download.html
+jdbc_driver_jar_path=<path to your postgresql jdbc jar file>
+
 
 [AWS]
 AWS_ACCESS_KEY_ID=abc
