--- a/airflow/local/Dockerfile
+++ b/airflow/local/Dockerfile
@@ -72,6 +72,7 @@ RUN set -ex \
 
 COPY script/entrypoint.sh /entrypoint.sh
 COPY config/airflow.cfg ${AIRFLOW_USER_HOME}/airflow.cfg
+COPY init.sql /docker-entrypoint-initdb.d/
 
 RUN chown -R airflow: ${AIRFLOW_USER_HOME}
 
