feat: add all functions required to create a db schema, and load a csv file - either via client or server - via copy into a PostgreSQL db

--- a/airflow/local/docker-compose-LocalExecutor.yml
+++ b/airflow/local/docker-compose-LocalExecutor.yml
@@ -40,4 +40,5 @@ services:
         volumes:
            # - /var/lib/postgresql/10/main:/var/lib/postgresql/data
             - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+            - ../../data:/data
 
