--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,35 @@
-astroid==2.3.1
+-i https://pypi.org/simple
+astroid==2.3.2
 astropy==3.2.2
 atomicwrites==1.3.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
-boto3==1.9.250
-botocore==1.12.250
+boto3==1.9.253
+botocore==1.12.253
+certifi==2019.9.11
+chardet==3.0.4
 confuse==1.0.0
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
+docker-py==1.10.6
+docker-pycreds==0.4.0
+docker==4.1.0
 docutils==0.15.2
 entrypoints==0.3
 htmlmin==0.1.12
-importlib-metadata==0.23
+idna==2.8
+importlib-metadata==0.23 ; python_version < '3.8'
 ipykernel==5.1.2
-ipython==7.8.0
 ipython-genutils==0.2.0
+ipython==7.8.0 ; python_version >= '3.3'
 ipywidgets==7.5.1
 isort==4.3.21
 jedi==0.15.1
-Jinja2==2.10.3
+jinja2==2.10.3
 jmespath==0.9.4
 jsonschema==3.1.1
-jupyter==1.0.0
 jupyter-client==5.3.4
 jupyter-console==6.0.0
 jupyter-contrib-core==0.3.3
@@ -32,11 +38,12 @@ jupyter-core==4.6.0
 jupyter-highlight-selected-word==0.2.0
 jupyter-latex-envs==1.4.6
 jupyter-nbextensions-configurator==0.4.1
+jupyter==1.0.0
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
 llvmlite==0.30.0
 lxml==4.4.1
-MarkupSafe==1.1.1
+markupsafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
 missingno==0.4.2
@@ -47,52 +54,55 @@ nbformat==4.4.0
 nbresuse==0.3.2
 notebook==6.0.1
 numba==0.46.0
-numpy==1.17.2
+numpy==1.17.3
 packaging==19.2
-pandas==0.25.1
 pandas-profiling==2.3.0
+pandas==0.25.2
 pandocfilters==1.4.2
 parso==0.5.1
-pexpect==4.7.0
+pexpect==4.7.0 ; sys_platform != 'win32'
 phik==0.9.8
 pickleshare==0.7.5
-plotly==4.1.1
+plotly==4.2.1
 pluggy==0.13.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 psutil==5.6.3
 psycopg2-binary==2.8.3
-ptyprocess==0.6.0
-py==1.8.0
+ptyprocess==0.6.0 ; os_name != 'nt'
 py4j==0.10.7
-Pygments==2.4.2
-pylint==2.4.2
+py==1.8.0
+pygments==2.4.2
+pylint==2.4.3
 pyparsing==2.4.2
 pyrsistent==0.15.4
 pyspark==2.4.4
-pytest==5.2.1
 pytest-pylint==0.14.1
-python-dateutil==2.8.0
+pytest==5.2.1
+python-dateutil==2.8.0 ; python_version >= '2.7'
 pytz==2019.3
-PyYAML==5.1.2
+pyyaml==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
+requests==2.22.0
 retrying==1.3.3
 s3transfer==0.2.1
 scipy==1.3.1
 seaborn==0.9.0
-Send2Trash==1.5.0
+send2trash==1.5.0
 six==1.12.0
-SQLAlchemy==1.3.10
+sqlalchemy==1.3.10
 tabulate==0.8.5
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
+tqdm==4.36.1
 traitlets==4.3.3
-typed-ast==1.4.0
-urllib3==1.25.6
+typed-ast==1.4.0 ; implementation_name == 'cpython' and python_version < '3.8'
+urllib3==1.25.6 ; python_version >= '3.4'
 wcwidth==0.1.7
 webencodings==0.5.1
+websocket-client==0.56.0
 widgetsnbextension==3.5.1
 wrapt==1.11.2
 zipp==0.6.0
