--- a/airflow/docker/dockerfiles/docker-compose-LocalExecutor.yml
+++ b/airflow/docker/dockerfiles/docker-compose-LocalExecutor.yml
@@ -1,13 +1,18 @@
 version: '2.1'
 services:
+
     postgres:
         image: postgres:9.6
         environment:
             - POSTGRES_USER=airflow
             - POSTGRES_PASSWORD=airflow
             - POSTGRES_DB=airflow
+
     webserver:
-        image: puckel/docker-airflow:1.10.4
+        image: custom-docker-airflow-spark
+        build:
+            context: ..
+            dockerfile: ../Dockerfile.airflow_spark
         restart: always
         depends_on:
             - postgres
@@ -19,7 +24,7 @@ services:
             - ../plugins:/usr/local/airflow/plugins
             - ./logs:/usr/local/airflow/logs
             - ../../requirements.txt:/requirements.txt
-            - ./spark_scripts:/usr/local/airflow/simple-app
+            - ./spark:/usr/local/airflow/spark
         ports:
             - "8080:8080"
         command: webserver
@@ -37,19 +42,31 @@ services:
             POSTGRES_USER: 'postgres'
             POSTGRES_PASSWORD: 'postgres'
         ports:
-            - "5433:5433"
+            - "5432:5432"
         volumes:
            # - /var/lib/postgresql/10/main:/var/lib/postgresql/data
-            - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+            - ./script/init.sql:/docker-entrypoint-initdb.d/init.sql
             - ../../data:/data
-    spark:
-        image: bde2020/spark-master:latest
+
+    spark-master:
+        image: bde2020/spark-master:2.4.4-hadoop2.7
+        container_name: spark-master
+        ports:
+            - "8088:8080"
+            - "7077:7077"
         environment:
-            - PYSPARK_PYTHON=python3
-            - SPARK_HOME=/spark
-            - API_VERSION=auto
+            - INIT_DAEMON_STEP=setup_spark
         volumes:
-            - ./spark_scripts:/simple-app
-            - ./spark_jars:/spark_jars
-            - ../dags/data:/data
-        #command: /spark/bin/spark-submit --master local[*] /simple-app/SimpleApp.py
+            - ./spark:/root/spark
+
+    spark-worker-1:
+        image: bde2020/spark-worker:2.4.4-hadoop2.7
+        container_name: spark-worker-1
+        depends_on:
+            - spark-master
+        ports:
+            - "8081:8081"
+        environment:
+            - "SPARK_MASTER=spark://spark-master:7077"
+        volumes:
+            - ./spark:/root/spark
