--- a/airflow/docker/docker-compose.yml
+++ b/airflow/docker/docker-compose.yml
@@ -52,7 +52,7 @@ services:
 
     spark-master:
         image: bde2020/spark-master:2.4.4-hadoop2.7
-        container_name: spark-master
+        #container_name: spark-master
         ports:
             - "8088:8080"
             - "7077:7077"
@@ -63,7 +63,7 @@ services:
 
     spark-worker-1:
         image: bde2020/spark-worker:2.4.4-hadoop2.7
-        container_name: spark-worker-1
+        #container_name: spark-worker-1
         depends_on:
             - spark-master
         ports:
