chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # CUSTOM:
 
+.aws/
 !data/
 data/*
 !data/helper/
@@ -7,6 +8,7 @@ data/helper/*
 !data/helper/__init__.py
 !data/helper/create_test_data.py
 !data/helper/load_to_s3.py
+
 
 airflow/docker/spark/dependencies/*
 
